Simplified configuration